--- a/src/pages/Wallet/Wallet.module.scss
+++ b/src/pages/Wallet/Wallet.module.scss
@@ -36,6 +36,10 @@
     width: 100%;
     height: 35px;
     background-color: rgb(180, 62, 62);
+    &:hover {
+        background-color: rgb(173, 30, 30);
+        border: none;
+    }
 }
 
 .title {
