--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -15,6 +15,7 @@
   padding: 24px 40px;
 
   h1 {
+    margin-top: 10px;
     color: white;
     font-size: 24px;
     font-weight: 500;
@@ -55,5 +56,12 @@
   align-items: center;
   cursor: pointer;
   gap: 14px;
+}
+
+.userIcon {
+  width: 20px;
+  height: 28px;
+  margin-left: 8px;
+  cursor:auto;
 }
 
