--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -9,6 +9,8 @@
   position: sticky;
   border-radius: 10px;
   top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
   z-index: 10;
   padding: 24px 40px;
 
