--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -22,6 +22,12 @@
   }
 }
 
+.authName {
+  font-size: large;
+  cursor: auto;
+  color: white;
+}
+
 .navItems {
   display: flex;
   flex-direction: row;
@@ -64,4 +70,88 @@
   margin-left: 8px;
   cursor:auto;
 }
+
+.menuIcon {
+  display: none;
+}
+
+
+@media screen and (max-width: 600px) {
+  .menuIcon {
+    display: block;
+    font-size: 17px;
+    color: white;
+    cursor: pointer;
+  }
+
+  .userIcon {
+    font-size: 17px;
+  }
+
+  .navItems {
+    opacity: 0;
+    display: none;
+    flex-direction: row;
+    gap: 10px;
+    background-color: rgb(47, 70, 164);
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 10px;
+    position: absolute;
+    right: 2px;
+    top: 50px;
+    z-index: 100;
+    transition: all 0.3s ease-in;
+    
+  }
+
+  .show {
+    display: flex;
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: auto;
+    transition: all 0.3s ease-in;
+    width: 100%;
+    justify-content: center;
+    gap: 35px;
+    align-self: center;
+  }
+
+  .hide {
+    display: none; // Immediately removed from layout
+    opacity: 0;
+    transform: translateY(-10px);
+    pointer-events: none;
+    transition: none;
+    // opacity: 0;
+    // transform: translateY(-10px);
+    // pointer-events: none;
+    // transition: none;
+    // width: 100%;
+    // display: flex;
+    // flex-direction: row;
+    // justify-content: center;
+    // gap: 35px;
+    // align-self: center;
+  }
+
+  .container {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 16px 20px;
+    height: auto;
+
+    h1 {
+      font-size: 18px;
+      margin-top: 0;
+    }
+  }
+
+  .authName {
+    font-size: 13px;
+    align-self: center;
+  }
+}
+
+
 
