--- a/src/pages/Diagram/Diagram.module.scss
+++ b/src/pages/Diagram/Diagram.module.scss
@@ -1,12 +1,18 @@
 .diagram {
-    margin-top: 70px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    padding-left: 50px;
-    width: 100%;
+  margin-top: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  padding-left: 50px;
+  width: 100%;
+  gap: 30px; 
+
+  @media screen and (max-width: 600px) {
+    flex-direction: column;
+    padding-left: 20px;
+    margin-top: 30px;
+    width: 90%;
+    height: fit-content;
+  }
 }
-
-
-
