--- a/src/pages/Login/login.module.scss
+++ b/src/pages/Login/login.module.scss
@@ -1,6 +1,5 @@
 .body {
     margin-top: 120px;
-    // background: linear-gradient(to left, rgb(225, 228, 232), rgb(141, 141, 157));
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -52,3 +51,43 @@ form {
     }
 }
 
+@media screen and (max-width: 600px) {
+  .body {
+    width: fit-content;
+    padding: 16px;
+    // margin-top: 100px;
+    border-radius: 12px;
+  }
+
+  .inputs {
+    input {
+      width: 50vh;
+      height: 35px;
+      font-size: 14px;
+
+      &:hover {
+        width: 100%;
+        height: 48px;
+      }
+    }
+  }
+
+  label {
+    font-size: 13px;
+    margin-top: 5px;
+  }
+
+  h1 {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 0;
+  }
+
+  form {
+    button {
+      width: 100%;
+      height: 42px;
+      font-size: 14px;
+    }
+  }
+}
