--- a/src/pages/Wallet/Wallet.module.scss
+++ b/src/pages/Wallet/Wallet.module.scss
@@ -1,88 +1,179 @@
 .wallet {
-    padding: 40px;
-    li {
-        border-radius: 8px;
-        background: linear-gradient(to left, rgb(218, 216, 225), rgb(204, 205, 213));
-        padding: 8px;
-    }
+  padding: 40px;
+
+  li {
+    border-radius: 8px;
+    background: linear-gradient(to left, rgb(218, 216, 225), rgb(204, 205, 213));
+    padding: 8px;
+  }
+
+  h1 {
+    font-size: 40px;
+    color: rgb(236, 227, 227);
+    margin-bottom: 10px;
+    text-align: center;
+    font-weight: bold;
+  }
+
+  ul {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+  }
+
+  
+
+  @media screen and (max-width: 600px) {
+    padding: 20px;
+
     h1 {
-        font-size: 40px;
-        color: rgb(236, 227, 227);
-        margin-bottom: 10px;
-        text-align: center;
-        font-weight: bold;
+      font-size: 28px;
     }
+
     ul {
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        gap: 10px;
+      grid-template-columns: repeat(1, 1fr);
     }
+  }
 }
 
-
 .line {
-    height: 2px;
-    background-color: rgb(182, 172, 172);
-    margin-bottom: 10px;
-
+  height: 2px;
+  background-color: rgb(182, 172, 172);
+  margin-bottom: 10px;
 }
 
 .empty {
-    font-size: 25px;
-    color: white;
-    text-align: center;
+  font-size: 25px;
+  color: white;
+  text-align: center;
+
+  @media screen and (max-width: 600px) {
+    font-size: 20px;
+  }
 }
 
 .removeBtn {
-    margin-top: 5px;
-    width: 100%;
+  margin-top: 5px;
+  width: 100%;
+  height: 35px;
+  background-color: rgb(180, 62, 62);
+  transition: 0.5s ease;
+
+  &:hover {
+    background-color: rgb(173, 30, 30);
+    border: none;
+  }
+
+  @media screen and (max-width: 600px) {
     height: 35px;
-    background-color: rgb(180, 62, 62);
-    transition: 0.5s ease;
-    &:hover {
-        background-color: rgb(173, 30, 30);
-        border: none;
-    }
+  }
 }
 
 .title {
-    margin-bottom: 5px;
-    font-size: 20px;
-    font-weight: bold;
+  margin-bottom: 5px;
+  font-size: 20px;
+  font-weight: bold;
+
+  @media screen and (max-width: 600px) {
+    font-size: 18px;
+  }
 }
 
 .type {
-    display: flex;
-    gap: 3px;
+  display: flex;
+  gap: 3px;
+
+  @media screen and (max-width: 600px) {
+    flex-direction: column;
+    gap: 6px;
+  }
 }
 
-
 .date {
-    color: rgb(91, 86, 86);
+  color: rgb(91, 86, 86);
 }
 
 .searchSelect {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 15px;
+  display: flex;
+  gap: 10px;
+  margin-bottom: 15px;
+
+  @media screen and (max-width: 600px) {
+    flex-direction: column;
+    gap: 8px;
+  }
 }
 
 .selectCat {
-    width: 30%;
-    height: 35px;
-    border-radius: 6px;
+  width: 30%;
+  height: 35px;
+  border-radius: 6px;
+
+  @media screen and (max-width: 600px) {
+    width: 100%;
+  }
 }
 
 .search {
-    padding: 5px;
-    width: 70%;
-    border-radius: 6px;
-    height: 35px;
-    
+  padding: 5px;
+  width: 70%;
+  border-radius: 6px;
+  height: 35px;
+
+  @media screen and (max-width: 600px) {
+    width: 100%;
+  }
 }
 
-.searchSelect input:focus , select:focus {
+.searchSelect input:focus,
+select:focus {
   outline: none;
   border: 2px solid #4a90e2;
   box-shadow: 0 0 5px #4a90e2;
 }
+
+.dateFilter {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+
+  label {
+    background-color: white;
+    border-radius: 6px;
+    padding-left: 3px;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    align-items: center;
+    @media screen and (max-width: 600px) {
+        width: 100%;
+        justify-content: space-around;
+        font-size: 15px;
+    }
+
+    input {
+      width: 130px;
+      height: 35px;
+      border: none;
+      cursor: pointer;
+    }
+
+    input:focus {
+      outline: none;
+      border: none;
+      box-shadow: none;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    width: 100%;
+  }
+
+}
+
+.dateInput {
+  padding: 6px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
